syntax = "proto3";

package pb;
option go_package = "../proto";


// STATE CRIADO NESSE SERVIÃ‡O
service Authorization {
    rpc Verify (VerifyRequest) returns (VerifyResponse) {}
    rpc Refresh (RefreshRequest) returns (RefreshResponse) {}
}

message VerifyRequest {
    string sid = 1;
    int32  wanted_permission = 2;
}

message VerifyResponse {
    bool valid = 1;
}

message RefreshRequest {
    string sid = 1;
    string refresh_token = 2;
}

message RefreshResponse {
    string sid = 1;
}