syntax = "proto3";

package pb;
option go_package = "../proto";


// STATE CRIADO NESSE SERVIÃ‡O
service Authenticator {
    rpc Authenticate (Session) returns (SID) {}
    rpc New (Void) returns (Session) {}
}

message Void {}

message SID {
    string s = 1;
}

// The response message containing the greetings
message Session {
    string sid = 1;
    string state = 2;
    string discordToken = 3;
}